// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Library.vue snapshot BookMarkList is mounted 1`] = `
<section class="content">
  <div>
    <aside class="side">
      <ul><span>test1</span></ul>
      <ul><span>test2</span></ul>
    </aside>
    <main>
      <div><input type="text" placeholder="url" style="width: 100%; font-size: 2rem; height: 2rem;"> <input type="text" placeholder="#tag" style="width: 100%; font-size: 2rem; height: 2rem;"> <button class="submit" style="font-weight: normal; font-size: 1.4rem; width: 8rem;">Susbmit</button></div>
      <div class="container">
        <ul>
          <li>
            <div><img src="testThumbnail1" alt=""> <a href="testUrl1">test1</a></div>
          </li>
          <li>
            <div><img src="testThumbnail2" alt=""> <a href="testUrl2">test2</a></div>
          </li>
        </ul>
      </div>
    </main>
  </div>
</section>
`;

exports[`Library.vue snapshot Loading component created 1`] = `
<section class="content">
  <div>
    <aside class="side"></aside>
    <main>
      <div><input type="text" placeholder="url" style="width: 100%; font-size: 2rem; height: 2rem;"> <input type="text" placeholder="#tag" style="width: 100%; font-size: 2rem; height: 2rem;"> <button class="submit" style="font-weight: normal; font-size: 1.4rem; width: 8rem;">Susbmit</button></div>
      <div class="container">
        <div class="lds-grid">
          <div></div>
          <div></div>
          <div></div>
          <div></div>
          <div></div>
          <div></div>
          <div></div>
          <div></div>
          <div></div>
        </div>
      </div>
    </main>
  </div>
</section>
`;
